--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,9 +1,10 @@
 :root {
   /* Colours */
   --dark-1: #121212;
-  --dark-2: #242424;
-  --dark-3: #333333;
-  --dark-4: #8a8a8a;
+  --dark-2: #181818;
+  --dark-3: #242424;
+  --dark-4: #333333;
+  --dark-5: #8a8a8a;
   --accent-1: #14d18c;
   --accent-2: #10a36e;
 }
@@ -18,11 +19,32 @@ h3,
 h4,
 h5,
 h6,
-p {
+p,
+li {
   color: white;
 }
 
 body {
   background-color: var(--dark-1);
   margin: 0;
+}
+
+html, body {
+  position: relative;
+  overflow: auto;
+  height: 100%;
+}
+
+a:hover {
+  color: white;
+}
+
+#__next {
+  display: flex;
+  flex-direction: column;
+  min-height: 100vh;
+}
+
+#pageContent {
+  flex-grow: 1;
 }
